@@ -1,5 +1,13 @@
 2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* lib/sgetspent.c: Add brackets and parenthesis.
+	* lib/sgetspent.c: Avoid assignments in comparisons.
+	* lib/sgetspent.c: Avoid implicit conversion of pointers / chars
+	to booleans.
+	* lib/sgetspent.c: Avoid multi-statements lines.
+
+2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* lib/sgetpwent.c: Avoid implicit conversion of pointers / chars to
 	booleans.
 	* lib/sgetpwent.c: Add brackets and parenthesis.
